--- a/templates/email_template.html
+++ b/templates/email_template.html
@@ -23,6 +23,7 @@
 	<p>Greetings from Borowy, a student has borrowed your club inventories. Please check the details below:</p>
 
 	<p><strong>Borrower Name:</strong> {{.Name}}</p>
+    <p><strong>Borrower Institute Id:</strong> {{.Id}}</p>
 	<p><strong>Return Date:</strong> {{.ReturnDate}}</p>
 
 	<table>
