--- a/templates/home_after_login.html
+++ b/templates/home_after_login.html
@@ -61,9 +61,10 @@ https://templatemo.com/tm-570-chain-app-dev
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
+              <li class="scroll-to-section"><a href="/home/" class="active">Home</a></li>
               <li class="scroll-to-section"><a href="#about">About</a></li>
-              <li class="scroll-to-section"><a href="#services">Items Borrowed</a></li>
+              <li class="scroll-to-section"><a href="#">Items Borrowed</a></li>
+              <li class="scroll-to-section"><a href="/">Logout</a></li>
               <li class="scroll-to-section"><a href="#newsletter">Contact Us</a></li>
             
             </ul>        
