added the club login for coordinators

--- a/templates/home_before_login.html
+++ b/templates/home_before_login.html
@@ -91,7 +91,7 @@ https://templatemo.com/tm-570-chain-app-dev
                   </div>
                   <div class="col-lg-12">
                     <div class="white-button first-button scroll-to-section">
-                      <a href="#contact">Club Coordinator Sign In <i class="fa fa-sign-in-alt"></i></a>
+                      <a href="/clublogin/">Club Coordinator Sign In <i class="fa fa-sign-in-alt"></i></a>
                     </div>
                     <div class="white-button scroll-to-section">
                       <a href="/signin/">Student SignIn <i class="fa fa-sign-in-alt"></i></a>
