--- a/templates/home_before_login.html
+++ b/templates/home_before_login.html
@@ -14,6 +14,11 @@
 
     <title>Chain App Dev - App Landing Page HTML5 Template</title>
 
+    <style>
+      .white-button {
+        margin-bottom: 10px; /* Adjust the value as needed to create the desired gap */
+      }
+    </style>
     <!-- Bootstrap core CSS -->
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
