--- a/templates/club_home.html
+++ b/templates/club_home.html
@@ -153,13 +153,13 @@ https://templatemo.com/tm-570-chain-app-dev
         <div class="col-12">
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
-            <a href="home_after_login.html" class="logo">
+            <a href="/clubhome/" class="logo">
               <img src="/static/assets/images/logo.jpg" alt="Chain App Dev" width="100px" height="75px">
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li class="scroll-to-section"><a href="/home/" class="active">Home</a></li>
+              <li class="scroll-to-section"><a href="/clubhome/" class="active">Home</a></li>
               <!-- <li class="scroll-to-section"><a href="#about">About</a></li> -->
               <!-- <li class="scroll-to-section"><a href="#">Items Borrowed</a></li> -->
               <li class="scroll-to-section"><a href="/">Logout</a></li>
@@ -190,7 +190,7 @@ https://templatemo.com/tm-570-chain-app-dev
                     <p>Chain App Dev is an app landing page HTML5 template based on Bootstrap v5.1.3 CSS layout provided by TemplateMo, a great website to download free CSS templates.</p>
                   </div>
                     <div class="white-button first-button scroll-to-section">
-                    <a href="/club/">Check the inventory list <i class="fa fa-sign-in-alt"></i></a>
+                    <a href="/club/">Inventory list <i class="fa fa-sign-in-alt"></i></a>
 
                   </div>
                 
@@ -211,9 +211,6 @@ https://templatemo.com/tm-570-chain-app-dev
             <div class="col-lg-6">
               <div class="right-image wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
                 <img src="/static/assets/images/back.png" alt="">
-              
-
-
               </div>
             </div>
           </div>
