--- a/templates/home_after_login.html
+++ b/templates/home_after_login.html
@@ -63,7 +63,7 @@ https://templatemo.com/tm-570-chain-app-dev
             <ul class="nav">
               <li class="scroll-to-section"><a href="/home/" class="active">Home</a></li>
               <li class="scroll-to-section"><a href="#about">About</a></li>
-              <li class="scroll-to-section"><a href="#">Items Borrowed</a></li>
+              <li class="scroll-to-section"><a href="/borrowlist/">Items Borrowed</a></li>
               <li class="scroll-to-section"><a href="/">Logout</a></li>
               <li class="scroll-to-section"><a href="#newsletter">Contact Us</a></li>
             
