--- a/templates/signin.html
+++ b/templates/signin.html
@@ -210,6 +210,7 @@
         if (responseData.Username) {
           sessionStorage.setItem("username", username);
           sessionStorage.setItem("name", responseData.Username);
+          sessionStorage.setItem("id", responseData.ID);
           window.location.href = "/home/";
         } else {
           alert("Invalid Credentials");
