--- a/templates/club_borrower_list.html
+++ b/templates/club_borrower_list.html
@@ -111,7 +111,7 @@
 
     jQuery(document).ready(function($) {
       $.ajax({
-        url: "/static/navbar.html",
+        url: "/static/navbar_2.html",
         type: "GET",
         dataType: "html",
         success: function (data) {
