--- a/templates/club_home.html
+++ b/templates/club_home.html
@@ -190,7 +190,7 @@ https://templatemo.com/tm-570-chain-app-dev
                     <p>Chain App Dev is an app landing page HTML5 template based on Bootstrap v5.1.3 CSS layout provided by TemplateMo, a great website to download free CSS templates.</p>
                   </div>
                     <div class="white-button first-button scroll-to-section">
-                    <a href="/club/">Inventory list <i class="fa fa-sign-in-alt"></i></a>
+                    <a href="/inventorylist/">Inventory list <i class="fa fa-sign-in-alt"></i></a>
 
                   </div>
                 
