--- a/templates/club_borrower_list.html
+++ b/templates/club_borrower_list.html
@@ -54,6 +54,16 @@
        background-color: rgb(255, 0, 0);
        /* color: rgb(0, 0, 0); */
    }
+   .panel input{
+        width: 100%;
+        height: 50px;
+        border-radius: 10px;
+        border: 1px solid rgb(0, 0, 0);
+        padding: 0 20px;
+        font-size: 1.2rem;
+        font-weight: 300;
+        margin-bottom: 20px;
+   }
  </style>
 </head>
 
@@ -90,11 +100,13 @@
             <div class="panel-body">
             
             <h1 class="fw-normal mb-4 text-black">Borrowers</h1>
+            <!-- <input type="text" id="searchInput" class="form-control" placeholder="Search by item name" oninput="performSearch()"> -->
             </div>
-        
+            
           </div>
-          
-   
+          <div class="panel">
+             <input type="text" id="searchInput" class="form-control" placeholder="Search by student name or Institute Id" oninput="performSearch()">
+          </div>
 
           <div class="card-container" id="card-container">
             <!-- Cards will be dynamically added here using JavaScript -->
@@ -123,7 +135,23 @@
       });
     });
 
-    
+    function performSearch() {
+          const searchInput = document.getElementById('searchInput');
+          const filter = searchInput.value.toUpperCase();
+          const cardContainer = document.getElementById('card-container');
+          const cards = cardContainer.getElementsByClassName('card');
+
+          for (let i = 0; i < cards.length; i++) {
+              const card = cards[i];
+              const name = card.getElementsByClassName('lead')[0];
+              const id = card.getElementsByClassName('lead')[1];
+              if (name.innerText.toUpperCase().indexOf(filter) > -1 || id.innerText.toUpperCase().indexOf(filter) > -1) {
+                  card.style.display = '';
+              } else {
+                  card.style.display = 'none';
+              }
+          }
+      }
 
     function dynamiccard(shoppingCart) {
           const cardContainer = document.getElementById('card-container');
